--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,6 +2,17 @@
 <%- include('./modules/nav.ejs') %>
     
 <div class="container blogs--box">
+
+    <div class="nav-wrapper">
+        <form action="" method="GET" class="search--blog">
+            <div class="input-field">
+                <input id="search" type="search" required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+            </div>
+        </form>
+    </div>
+
     <div class="row">
 
         <% if(blogs.length > 0) { %> 
