--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -77,7 +77,7 @@
         </div>
     </form>
 
-    <form action="/blogs/addAdmin" method="POST" id="addAdminForm" class="col s10 m8 l6 login--form">
+    <form action="/addAdmin" method="POST" id="addAdminForm" class="col s10 m8 l6 login--form">
         <div class="row">
             <h4 class="left-align">Dodaj konto admina</h4>
         </div>
@@ -91,6 +91,15 @@
             <div class="input-field col s12">
                 <input id="newAdminPassword" name="newAdminPassword" type="password" class="validate white-text">
                 <label for="newAdminPassword" class="white-text">Hasło</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <p class="center red-text">
+                    <% if (adminReg != '') { %>
+                        <%= adminReg %>
+                    <% } %>
+                </p>
             </div>
         </div>
         <div class="row btn--row">
