Add search blog functionality

--- a/public/css/blogPage.css
+++ b/public/css/blogPage.css
@@ -55,4 +55,4 @@
 .blog--content table th {
     text-align: center;
 }
-.blog--content table th { background-color: #20418d; }
+.blog--content table th { background-color: #2e86de; }
