--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </header>
 
 <section class="container section about--blog">
-    <h2 class="center-align heading--title">Na naszym blogu znajdziesz: </h2>
+    <h2 class="center-align heading--title our--blog">Na naszym blogu znajdziesz: </h2>
 
     <div class="col s12 l4 transparent">
         <div class="card">
