--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,9 @@
     
     <form class="col s10 m8 l6 login--form" action="/login" method="POST">
         <div class="row">
+            <h4 class="left-align">Zaloguj się</h4>
+        </div>
+        <div class="row">
             <div class="input-field col s12">
                 <input id="login" name="login" type="text" class="validate white-text">
                 <label for="login" class="white-text">Login</label>
