--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,9 @@ html {
     margin: 150px auto;
     font-family: 'Bree Serif', serif;
 }
+.our--blog {
+    text-shadow: 2px 2px 10px #000;
+}
 
 /* SearchBox */
 .nav-wrapper {
@@ -103,7 +106,7 @@ html {
     margin: 50px auto;
     border-radius: 13px;
     padding: 30px 10px;
-    background-image: url('../img/code.jpg');
+    background-image: url('../img/sectionPic.jpg');
     background-blend-mode: difference;
     background-size: cover;
     background-position: center;
@@ -113,7 +116,7 @@ html {
     padding: 0 10px;
 }
 
-.card { background-color: rgba(0, 0, 0, .3); margin: 50px auto !important;}
+.card { background-color: rgba(0, 0, 0, .7); margin: 50px auto !important;}
 .card-action { border-top: none !important; }
 .second--card {
     text-align: right;
