--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,12 +1,12 @@
 <%- include('./modules/head.ejs') %>
 <%- include('./modules/nav.ejs') %>
-    
+   
 <div class="container blogs--box">
 
     <div class="nav-wrapper">
-        <form action="" method="GET" class="search--blog">
+        <form action="/search-blog" method="GET" class="search--blog">
             <div class="input-field">
-                <input id="search" type="search" required>
+                <input id="search" name="search" type="search" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                 <i class="material-icons">close</i>
             </div>
